# SinkHole

./: .dockerignore  .gitignore  AWS_DOCKER_DEPLOY.md  CICD_AWS_SETUP.md  DEMO_GUIDE.md  DEMO_RUNBOOK_PORT80.md  DOCKER_QUICKSTART.md  Dockerfile  Dockerfile.engine  Dockerfile.standalone  HARDENING_PLAN.md  IMPLEMENTATION_DETAIL.md  INTEGRATION_GUIDE.md  README.md  WORK_BREAKDOWN.md  botwall.toml  default.conf  docker-compose.demo.yml  docker-compose.production.yml  docker-compose.yml  firecrawl.sh  nginx_full.conf  ou1.html  out.md  output.json  poison.py  pyproject.toml  requirements.txt  run_test.sh  sample.txt  scrape_report.json  test_scraper.py
.demo-nginx/: nginx.conf
.github/workflows/: deploy-aws.yml
botwall/: __init__.py  __main__.py  app.py  behavioral.py  config.py  content_harvester.py  crypto.py  decoy.py  embeddings_content.py  embeddings_renderer.py  enhanced_decoy.py  extrapolation_engine.py  extrapolation_renderer.py  html.py  js_verify_page.py  models.py  proof.py  regeneration_scheduler.py  scoring.py  state.py  telemetry.py  test_suite.py  traversal.py
deploy/: Caddyfile  apache-botwall.lua  apache.conf  docker-nginx.conf.template  nginx-live-demo.conf  nginx-production.conf  nginx.conf  startup.sh  supervisord.conf
scripts/: demo_origin_site.py  deploy_docker.sh  deploy_on_aws.sh  localhost_gateway.py  localhost_integration_demo.py  realworld_validation.py  render_deploy.py  stage2_scraper_test.py  team2_logic_check.py  validate_live.py
tests/: test_api_integration.py  test_decoy.py  test_scoring.py  test_tokens.py
(+10 files in other folders)
