[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "botwall"
version = "0.1.0"
description = "Python Botwall v1: layered anti-scraping gateway with challenge + decoy"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.135.0",
  "uvicorn>=0.41.0",
  "pydantic>=2.12.0",
  "redis>=7.3.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=9.0.0",
  "httpx>=0.28.0",
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.setuptools]
packages = ["botwall"]
